release: 4.2.0.1 — Spark 4.x support; README + RELEASE notes
Document the 4.2.0.1 release (Apache Spark 4.2.0 / Scala 2.13.18 / JDK 17 /
Python 3.12 with numpy 2.4 / pandas 2.3 / pyarrow 25), published as
subinksoman/ae-<svc>:4.2.0.1. README release table updated (4.2.0.1 latest);
RELEASE.md gains a full 4.2.0.1 section above 3.0.0.8.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>